syntax = "proto3";
option go_package = "FusionBridge/metadata/id";

import "google/protobuf/timestamp.proto";

package id;

// Look into:
//     - VLAN tags

message NetInfo {
    string IP = 1;
    repeated string HostNames = 2;
}

message InterfaceEntry {
    string MAC = 1;
    string Name = 2;
    repeated NetInfo NetInfo = 3;
}

message WhoAmI {
    int32 SubmissionNumber = 1;
    google.protobuf.Timestamp TimeStamp = 2; // A unix timestamp
    repeated InterfaceEntry Interfaces = 3;
    string UUID = 4;
    string DevID = 17;
}

message YouIs {
    int32 SubmissionNumber = 1;
    int32 Type = 2;
}

service ID {
    rpc SaveMyID(WhoAmI) returns (YouIs) {}
}

